--- a/contact.css
+++ b/contact.css
@@ -132,17 +132,19 @@ nav {
   width: 100%;
 }
 
-.sm{
+.sm {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #1b2123;
 }
+
 .sm span {
   color: white;
   font-size: 10px;
   text-align: center;
 }
+
 /* asked questions */
 .asked-questions {
   display: flex;
@@ -153,6 +155,7 @@ nav {
   width: 100%;
   min-height: 60vh;
 }
+
 .asked-questions h2 {
   font-size: 55px;
   font-weight: bold;
@@ -167,13 +170,30 @@ nav {
   border: none;
 }
 
-.accordion{
-  display:flex;
+.accordion {
+  display: flex;
   flex-direction: column;
   padding: 20px;
   background-color: #f7f7f7;
-  gap:10px;
+  gap: 10px;
 }
-.font{
+
+.font {
   font-size: 25px;
+}
+
+@media (max-width: 565px) {
+
+  .header-msg {
+    font-size: 1rem;
+  }
+
+  .content h2 {
+    font-size: 1.5rem;
+  }
+
+  .asked-questions h2 {
+    font-size: 31px;
+  }
+
 }
